# vibeCodingPractice_SanctionScreeningPrototype

./: .gitignore  README.md  pyproject.toml  run.ps1  session-ses_0a4b.md
app/: config.py  database.py  ingest.py  main.py  schemas.py
app/ai/: __init__.py  analyzer.py  ollama.py  prompts.py  query.py
app/matchers/: __init__.py  exact.py  fuzzy.py  scorer.py
app/models/: __init__.py  case.py
app/routes/: analyze.py  batch.py  cases.py  pages.py  query.py  resolve.py  screen.py  stats.py
app/static/: style.css
app/templates/: base.html  batch.html  cases.html  dashboard.html  index.html  query.html
app/templates/partials/: _batch_results.html  _case_row.html  _screen_result.html
docs/: CODE_EXECUTION_FLOW.md  PREREQUISITES.md  SEQUENCE_FLOW.md
