[project]
name = "sanction-screening"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
    "pydantic>=2.0",
    "thefuzz>=0.20",
    "jellyfish>=1.0",
    "python-Levenshtein>=0.21",
]

[project.scripts]
screen = "app.ingest:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

